--- a/LinearRegrassion.ipynb
+++ b/LinearRegrassion.ipynb
@@ -31,7 +31,7 @@
     "\n",
     "W = Weights vector of size (n+1)x1, or W ∈ ℝⁿ⁺¹\n",
     "\n",
-    "$\\large Y =\n",
+    "$$\\large Y =\n",
     "\\begin{bmatrix}\n",
     "y^{1}\\\\\n",
     "y^{2}\\\\\n",
@@ -58,7 +58,7 @@
     "\\vdots\\\\\n",
     "w_{n}\\\\\n",
     "w_{n+1}\\\\\n",
-    "\\end{bmatrix}$"
+    "\\end{bmatrix}$$"
    ]
   },
   {
@@ -66,18 +66,20 @@
    "id": "e34ae574",
    "metadata": {},
    "source": [
-    "$\\large \\hat{y}^{i} = \\sum \\limits _{k=1} ^{n} w_{k}\\times x_{k}^{i} + b = \\sum \\limits _{k=1} ^{n+1} w_{k}\\times x_{k}^{i}  \\quad\\quad\\quad\\quad w_{n+1} = b \\quad  \\text{and} \\quad x_{n+1} = 1 \\label{eq:eq1} \\tag{1}$\n",
+    "$$\\large \\hat{y}^{i} = \\sum \\limits _{k=1} ^{n} w_{k}\\times x_{k}^{i} + b = \\sum \\limits _{k=1} ^{n+1} w_{k}\\times x_{k}^{i} \\quad\\quad\\quad\\quad w_{n+1} = b \\quad  \\text{and} \\quad x_{n+1} = 1\n",
+    "$$\n",
     "\n",
-    "$\\large \\hat{y}^{i} = \\begin{bmatrix}x^{i}_{1} & x^{i}_{2} & x^{i}_{3} & \\dots & x^{1}_{n} & 1\\end{bmatrix} \\begin{bmatrix} w_{1}\\\\\n",
+    "$$\\large \\hat{y}^{i} = \\begin{bmatrix}x^{i}_{1} & x^{i}_{2} & x^{i}_{3} & \\dots & x^{1}_{n} & 1\\end{bmatrix} \\begin{bmatrix} w_{1}\\\\\n",
     "w_{2}\\\\\n",
     "w_{3}\\\\\n",
     "\\vdots\\\\\n",
     "w_{n}\\\\\n",
     "w_{n+1}\\\\\n",
-    "\\end{bmatrix}  \\label{eq:eq2} \\tag{2} $\n",
+    "\\end{bmatrix}\n",
+    "$$\n",
     "\n",
     "\n",
-    "$\\large \\hat{Y}  = \\begin{bmatrix}\n",
+    "$$\\large \\hat{Y}  = \\begin{bmatrix}\n",
     "\\hat{y}^{1}\\\\\n",
     "\\hat{y}^{2}\\\\\n",
     "\\hat{y}^{3}\\\\\n",
@@ -100,11 +102,10 @@
     "w_{n}\\\\\n",
     "w_{n+1}\\\\\n",
     "\\end{bmatrix}\n",
-    "\\label{eq:eq5} \\tag{3}\n",
-    "$\n",
+    "$$\n",
     "\n",
     "\n",
-    "$\\hat{Y} = X.W  \\label{eq:eq4} \\tag{4}$"
+    "$$\\hat{Y} = X.W $$"
    ]
   },
   {
@@ -126,7 +127,7 @@
    "id": "e6aab87b",
    "metadata": {},
    "source": [
-    "$\\large Y =\n",
+    "$$\\large Y =\n",
     "\\begin{bmatrix}\n",
     "y^{1}\\\\\n",
     "y^{2}\\\\\n",
@@ -152,7 +153,7 @@
     "e^{3}\\\\\n",
     "\\vdots\\\\\n",
     "e^{m}\\\\\n",
-    "\\end{bmatrix}$ "
+    "\\end{bmatrix}$$ "
    ]
   },
   {
@@ -160,20 +161,20 @@
    "id": "76b09cd3",
    "metadata": {},
    "source": [
-    "Cost Function\n",
+    "### Cost Function\n",
     "\n",
-    "$\\large L_{C}(Y,\\hat{Y}) = \\frac{1}{m} \\sum_{k=1}^{m} \\left (y^{k}-\\hat{y}^{k} \\right )^{2}   \\label{eq:eq5} \\tag{5}$\n",
+    "$$\\large L_{C}(Y,\\hat{Y}) = \\frac{1}{m} \\sum_{k=1}^{m} \\left (y^{k}-\\hat{y}^{k} \\right )^{2} $$\n",
     "\n",
-    "$\\large L_{C}(Y,\\hat{Y}) = \\frac{1}{m} \\sum_{k=1}^{m} ( e^{k} )^{2}  = \\frac{1}{m} \\left [ (e^{1})^{2} + (e^{2})^{2}+ (e^{2})^{3}+ \\dots + (e^{2})^{m}  \\right ] \\label{eq:eq6} \\tag{6}$\n",
+    "$$\\large L_{C}(Y,\\hat{Y}) = \\frac{1}{m} \\sum_{k=1}^{m} ( e^{k} )^{2}  = \\frac{1}{m} \\left [ (e^{1})^{2} + (e^{2})^{2}+ (e^{2})^{3}+ \\dots + (e^{2})^{m}  \\right ]$$\n",
     "\n",
-    "$\\large L_{C}(Y,\\hat{Y}) = \\frac{1}{m} \\begin{bmatrix}e^{1} & e^{2} & e^{3} & \\dots & e^{m} &\\end{bmatrix} \\begin{bmatrix} e^{1} \\\\\n",
+    "$$\\large L_{C}(Y,\\hat{Y}) = \\frac{1}{m} \\begin{bmatrix}e^{1} & e^{2} & e^{3} & \\dots & e^{m} &\\end{bmatrix} \\begin{bmatrix} e^{1} \\\\\n",
     "e^{2} \\\\\n",
     "e^{3} \\\\\n",
     "\\vdots\\\\\n",
     "e^{m} \\\\\n",
-    "\\end{bmatrix} \\label{eq:eq7} \\tag{7} $\n",
+    "\\end{bmatrix}$$\n",
     "\n",
-    "$\\large L_{C}(Y,\\hat{Y}) = \\frac{1}{m} e^{T}e \\label{eq:eq8} \\tag{8} $\n"
+    "$$\\large L_{C}(Y,\\hat{Y}) = \\frac{1}{m} e^{T}e$$\n"
    ]
   },
   {
@@ -201,9 +202,9 @@
    "source": [
     "Our learning problem reduces to that of finding a good set of weights/parameters for our model which minimizes the cost function.\n",
     " \n",
-    "$\\hat{W} \\in \\mathbb{R}^{n+1}$ \n",
+    "$$\\hat{W} \\in \\mathbb{R}^{n+1}$$ \n",
     "\n",
-    "$\\large \\hat{W} = \\text{argmin}_{W}L_{c}(Y,\\hat{Y}) \\quad\\quad \\text{where,}\\quad W \\in \\mathbb{R}^{n+1}      \\label{eq:eq9} \\tag{9} $"
+    "$$\\large \\hat{W} = \\text{argmin}_{W}L_{c}(Y,\\hat{Y}) \\quad\\quad \\text{where,}\\quad W \\in \\mathbb{R}^{n+1}      $$"
    ]
   },
   {
@@ -430,7 +431,8 @@
    "source": [
     "#### Creating Model Class default max_iteration_count is 100 and learnng rate is 0.001\n",
     "\n",
-    "$\\large \\text{max_iteration} = 1000 \\quad  \\text {and } \\quad \\eta = 0.001 $\n"
+    "##### max_iteration= 1000 \n",
+    "##### eta = 0.001\n"
    ]
   },
   {
@@ -553,9 +555,17 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "id": "164a171c-64da-4cda-80ae-9e6a4c679f2b",
+   "metadata": {},
+   "source": [
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8fc9f57c",
+   "id": "c50fdbae-18ab-4f80-8411-e27d31c79526",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -563,7 +573,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -577,7 +587,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.11.9"
   },
   "toc": {
    "base_numbering": 1,
